# LLM-task-orchestrator

./: .gitignore  CODEX.md  README.md  RULES.md  SAMPLESQL.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260216_0001_core_schema.py
backend/app/: main.py
backend/app/api/grpc/: server.py  task_handler.py
backend/app/api/routes/: health.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  task.py
backend/app/repositories/: __init__.py  task_repository.py
backend/app/schemas/: task.py  task_mapper.py
backend/app/services/: nim_client.py  task_service.py  task_templates.py
backend/app/workers/: celery_app.py  task_names.py  tasks.py
backend/orchestrator/v1/: tasks_pb2.py  tasks_pb2_grpc.py
backend/scripts/: generate_grpc_stubs.py  test_nim_call.py
envoy/: envoy.yaml
frontend/: .dockerignore  .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/scripts/: generate-grpc.cjs
frontend/src/: App.jsx  App.tsx  index.css  main.jsx  main.tsx  styles.css  vite-env.d.ts
frontend/src/components/: AppIcons.tsx
frontend/src/grpc/: client.ts  grpcErrors.ts  rpcContext.ts  taskFormatters.ts  tasksApi.ts
frontend/src/pages/: HomePage.jsx  HomePage.tsx  TaskDetailPage.tsx  TasksPage.jsx  TasksPage.tsx
proto/orchestrator/v1/: tasks.proto
scripts/: generate_grpc_stubs.ps1  generate_grpc_stubs_in_container.sh
tools/stubgen/: Dockerfile
